# agentic-patterns

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  middleware.py
core/: database.py
core/agents/: base_agent.py  router.py  supervisor.py  verifier.py
core/engine/: __init__.py  template_engine.py
core/guardrails/: hallucination.py
core/integrations/: __init__.py  adapter_base.py  normalizer.py  oauth_manager.py  webhooks.py
core/llm/: router.py
core/mcp/: circuit_breaker.py  server_template.py  tool_registry.py
core/memory/: layered_memory.py
core/models/: __init__.py  base.py
core/observability/: otel_setup.py
core/rag/: fallback.py  hybrid_search.py  reranker.py
core/resilience/: __init__.py  dlq.py  idempotency.py
core/skills/: SKILL_TEMPLATE.md  loader.py
docs/: creating-verticals.md  deployment.md  getting-started.md  mcp-guide.md  pydantic-ai-patterns.md  rag-pipeline.md
patterns/: __init__.py  domain_config.py  repository.py  rules_engine.py  workflow_states.py
tests/: test_agents.py  test_guardrails.py  test_llm_router.py  test_mcp.py  test_memory.py  test_rag.py  test_skills.py
verticals/bookstore/: SKILL.md  __init__.py  config.py  renderer.py  repository.py  router.py  rules.py
verticals/bookstore/agents/: __init__.py
verticals/bookstore/mcp_servers/: __init__.py  bookstore_server.py
verticals/bookstore/models/: __init__.py  db_models.py  schemas.py
verticals/demo/: SKILL.md
(+4 files in other folders)
