[project]
name = "agentos"
version = "0.1.0"
description = "Production AI agent framework with Pydantic AI, MCP Protocol, and modular skill architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Wington Brito"}]
dependencies = [
    "pydantic-ai>=0.0.40",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastmcp>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "httpx>=0.27.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/wingtonrbrito/agentic-patterns"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["core*", "verticals*", "api*", "patterns*"]
